--- a/css/index.css
+++ b/css/index.css
@@ -167,7 +167,7 @@ nav{
 
 header{
     position: relative;
-    background: url(/images/slider1.jpg);
+    background: url(images/slider1.jpg);
     background-size: cover;
     width: 100%;
     height: 750px;
@@ -309,7 +309,7 @@ header::before{
     height: 1080px;
     position: relative;
     width: 100%;
-    background: url(/images/menubg.jpg) center;
+    background: url(images/menubg.jpg) center;
     opacity: 0.8;
     background-size: cover;
     display: flex;
@@ -530,12 +530,12 @@ header::before{
 }
 
 #sImg{
-    background: url(/images/gallary/gallary1.jpg) center;
+    background: url(images/gallary/gallary1.jpg) center;
     transition: 0.5s;
 }
 
 #eImg{
-    background: url(/images/gallary/gallary2.jpg) center;
+    background: url(images/gallary/gallary2.jpg) center;
     transition: 0.5s;
 }
 
